--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,8 @@
 body {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Lucida Console", "Courier New", monospace;
+  background-color: black;
+  color: aliceblue;
+
 }
 
 h1,
@@ -8,10 +11,21 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Rubik Mono One', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+}
+
+p {
+  color: black;
 }
 
 .small {
   font-weight: 300;
   font-style: italic;
+}
+
+.booktitle {
+
+  color: black;
+
 }
